integrate scenario project

--- a/Packages/repositories.config
+++ b/Packages/repositories.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Source\Gnip.Client.Scenarios\packages.config" />
   <repository path="..\Source\Gnip.Client.Tests\packages.config" />
+  <repository path="..\Source\Gnip.Client\packages.config" />
 </repositories>
