--- a/Source/Gnip.Client.Tests/Gnip.Client.Tests.csproj
+++ b/Source/Gnip.Client.Tests/Gnip.Client.Tests.csproj
@@ -52,6 +52,15 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Gnip.Client\Gnip.Client.csproj">
+      <Project>{fc9adc2d-3ae0-4719-914f-736f49068ffb}</Project>
+      <Name>Gnip.Client</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Model\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
