--- a/Source/Gnip.Client/Gnip.Client.csproj
+++ b/Source/Gnip.Client/Gnip.Client.csproj
@@ -59,8 +59,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Converter\FacebookConvert.cs" />
+    <Compile Include="Converter\FaceBookTypeDetector.cs" />
+    <Compile Include="Extensions\XmlDocumentExtensions.cs" />
     <Compile Include="IHttpStreaming.cs" />
     <Compile Include="Model\ClientDisconnectReason.cs" />
+    <Compile Include="Model\Facebook\FacebookAuthor.cs" />
+    <Compile Include="Model\Facebook\FacebookBookmark.cs" />
+    <Compile Include="Model\Facebook\FacebookComment.cs" />
+    <Compile Include="Model\Facebook\FacebookNote.cs" />
+    <Compile Include="Model\Facebook\FacebookPhoto.cs" />
+    <Compile Include="Model\Facebook\FacebookRoot.cs" />
+    <Compile Include="Model\Facebook\MatchingRule.cs" />
     <Compile Include="Model\GnipAccessToken.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReconnectableHttpStreaming.cs" />
@@ -68,6 +78,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
