--- a/Source/Gnip.Client.Scenarios/Gnip.Client.Scenarios.csproj
+++ b/Source/Gnip.Client.Scenarios/Gnip.Client.Scenarios.csproj
@@ -71,7 +71,9 @@
     <Compile Include="Scenarios\RawDataScenario\Scenario.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="NLog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
