--- a/Source/Gnip.Client/Gnip.Client.csproj
+++ b/Source/Gnip.Client/Gnip.Client.csproj
@@ -42,6 +42,11 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Client.5.0.0-alpha1\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
     <Reference Include="System.Reactive.Core, Version=2.1.30214.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Rx-Core.2.1.30214.0\lib\Net45\System.Reactive.Core.dll</HintPath>
@@ -55,9 +60,7 @@
       <HintPath>..\..\packages\Rx-Linq.2.1.30214.0\lib\Net45\System.Reactive.Linq.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -67,8 +70,10 @@
     <Compile Include="Extensions\StreamingExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Extensions\XmlDocumentExtensions.cs" />
+    <Compile Include="IGnipRules.cs" />
     <Compile Include="IHttpStreaming.cs" />
     <Compile Include="Impl\GnipWebRequest.cs" />
+    <Compile Include="Impl\HttpGnipRules.cs" />
     <Compile Include="Model\ClientDisconnectReason.cs" />
     <Compile Include="Model\Data\EntryAuthor.cs" />
     <Compile Include="Model\Data\ActivityBookmark.cs" />
@@ -78,6 +83,8 @@
     <Compile Include="Model\Data\Activity.cs" />
     <Compile Include="Model\Data\MatchingRule.cs" />
     <Compile Include="Model\GnipAccessToken.cs" />
+    <Compile Include="Model\Rule.cs" />
+    <Compile Include="Model\Rules.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReconnectableHttpStreaming.cs" />
   </ItemGroup>
