--- a/Source/Gnip.Client.Scenarios/Gnip.Client.Scenarios.csproj
+++ b/Source/Gnip.Client.Scenarios/Gnip.Client.Scenarios.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scenarios\MultipleStreamScenario\Scenario.cs" />
     <Compile Include="Scenarios\RawDataScenario\Scenario.cs" />
+    <Compile Include="Scenarios\RulesScenario\Scenario.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
