--- a/Gnip.Client.nuspec
+++ b/Gnip.Client.nuspec
@@ -11,6 +11,7 @@
       <dependency id="Rx-Linq" version="[2.1.30214.0,)" />
       <dependency id="NLog" version="[2.0.1.2,)" />
       <dependency id="Microsoft.AspNet.WebApi.Client" version="[4.0.30506.0,)" />
+      <dependency id="Gnip.Model" version="[0.1.0,)" />
     </dependencies>
   </metadata>
   <files>
