--- a/Packages/repositories.config
+++ b/Packages/repositories.config
@@ -3,4 +3,5 @@
   <repository path="..\Source\Gnip.Client.Scenarios\packages.config" />
   <repository path="..\Source\Gnip.Client.Tests\packages.config" />
   <repository path="..\Source\Gnip.Client\packages.config" />
+  <repository path="..\Source\Gnip.Model\packages.config" />
 </repositories>
