--- a/Source/Gnip.Client.Tests/Gnip.Client.Tests.csproj
+++ b/Source/Gnip.Client.Tests/Gnip.Client.Tests.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{7BA13A16-8FC7-4665-B27E-04078C6714EE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Gnip.Client.Tests</RootNamespace>
+    <RootNamespace>Krowiorsch.Gnip</RootNamespace>
     <AssemblyName>Gnip.Client.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -63,7 +63,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Converter\when_read_a_xml_stream_with_unicode.cs">
+      <DependentUpon>with_activityConvert.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Samples\XmlSamplesProvider.cs" />
+    <Compile Include="Converter\with_activityConvert.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -73,9 +78,24 @@
       <Project>{fc9adc2d-3ae0-4719-914f-736f49068ffb}</Project>
       <Name>Gnip.Client</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Gnip.Model\Gnip.Model.csproj">
+      <Project>{274f0e0d-01fa-46e9-92a2-904d2b1146a4}</Project>
+      <Name>Gnip.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Model\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Samples\Comment\Comment1.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Samples\Note\Note2_withUnicode.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Samples\Note\Note1.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
