--- a/Source/Gnip.Client/Gnip.Client.csproj
+++ b/Source/Gnip.Client/Gnip.Client.csproj
@@ -76,28 +76,19 @@
     <Compile Include="Impl\GnipWebRequest.cs" />
     <Compile Include="Impl\HttpGnipRulesRepository.cs" />
     <Compile Include="Model\ClientDisconnectReason.cs" />
-    <Compile Include="Model\Data\ActivityMusic.cs" />
-    <Compile Include="Model\Data\ActivityOffer.cs" />
-    <Compile Include="Model\Data\ActivityQuestion.cs" />
-    <Compile Include="Model\Data\ActivitySwf.cs" />
-    <Compile Include="Model\Data\ActivityVideo.cs" />
-    <Compile Include="Model\Data\EntryAuthor.cs" />
-    <Compile Include="Model\Data\ActivityBookmark.cs" />
-    <Compile Include="Model\Data\ActivityComment.cs" />
-    <Compile Include="Model\Data\ActivityNote.cs" />
-    <Compile Include="Model\Data\ActivityPhoto.cs" />
-    <Compile Include="Model\Data\Activity.cs" />
-    <Compile Include="Model\Data\MatchingRule.cs" />
     <Compile Include="Model\GnipAccessToken.cs" />
-    <Compile Include="Model\Rule.cs" />
-    <Compile Include="Model\Rules.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReconnectableHttpStreaming.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Gnip.Model\Gnip.Model.csproj">
+      <Project>{274f0e0d-01fa-46e9-92a2-904d2b1146a4}</Project>
+      <Name>Gnip.Model</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
