--- a/Source/Gnip.Client.Scenarios/Gnip.Client.Scenarios.csproj
+++ b/Source/Gnip.Client.Scenarios/Gnip.Client.Scenarios.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Scenarios\ReplayAndObserveScenario\Scenario.cs" />
     <Compile Include="Scenarios\ReplayStreamScenario\Scenario.cs" />
     <Compile Include="Scenarios\RulesScenario\Scenario.cs" />
+    <Compile Include="Scenarios\SingleTypeScenario\Scenario.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
