add nActivtystream with converter

--- a/Packages/repositories.config
+++ b/Packages/repositories.config
@@ -4,4 +4,6 @@
   <repository path="..\Source\Gnip.Client.Tests\packages.config" />
   <repository path="..\Source\Gnip.Client\packages.config" />
   <repository path="..\Source\Gnip.Model\packages.config" />
+  <repository path="..\Source\NActivityStream.Tests\packages.config" />
+  <repository path="..\Source\NActivityStream\packages.config" />
 </repositories>
