--- a/Source/Gnip.Client/Gnip.Client.csproj
+++ b/Source/Gnip.Client/Gnip.Client.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Extensions\GnipStreamingExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Extensions\XmlDocumentExtensions.cs" />
+    <Compile Include="Model\GnipSystemMessage.cs" />
     <Compile Include="IGnipRulesRepository.cs" />
     <Compile Include="IHttpStreaming.cs" />
     <Compile Include="Impl\GnipReplayReader.cs" />
