--- a/Source/NActivityStream.Tests/NActivityStream.Tests.csproj
+++ b/Source/NActivityStream.Tests/NActivityStream.Tests.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Converter\when_deserialize_gnip_facebook.cs" />
     <Compile Include="Converter\when_deserialize_gnip_twitter.cs" />
     <Compile Include="Converter\when_deserialize_minimal_spec.cs" />
+    <Compile Include="Converter\when_serialize_and_deserialize_minimal_activity.cs" />
     <Compile Include="Converter\with_ActivityConvert.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Samples\FacebookSamplesProvider.cs" />
